--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#7bc8f3"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:layout_alignParentTop="true" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -49,7 +50,6 @@
             android:hint="Digite aqui a sua bio"
             android:id="@+id/editTextDescricao"
             android:layout_below="@+id/EditTextNome"
-            android:layout_above="@+id/ButtonAddTag"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:maxLines="6"
@@ -64,8 +64,29 @@
             android:id="@+id/textView4"
             android:textSize="36sp"
             android:textColor="@android:color/background_light"
-            android:layout_above="@+id/EditTextNome"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
+
+        <Button
+            android:text="Add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ButtonAddTag"
+            android:layout_below="@+id/editTextDescricao"
+            android:background="#7bc8f3"
+            android:textColor="@android:color/background_light"
+            android:onClick="populateListView"
+            android:layout_alignTop="@+id/editTextTag"
+            android:layout_toRightOf="@+id/editTextTag"
+            android:layout_toEndOf="@+id/editTextTag" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ListViewTags"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/ButtonAddTag"
+            android:layout_above="@+id/button3" />
 
         <AutoCompleteTextView
             android:layout_width="wrap_content"
@@ -73,21 +94,10 @@
             android:ems="10"
             android:id="@+id/editTextTag"
             android:hint="Tag"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="17dp"
+            android:layout_below="@+id/editTextDescricao"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-
-        <Button
-            android:text="Add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ButtonAddTag"
-            android:background="#7bc8f3"
-            android:textColor="@android:color/background_light"
-            android:onClick="populateListView"
-            android:layout_alignTop="@+id/editTextTag"
-            android:layout_toRightOf="@+id/editTextTag"
-            android:layout_toEndOf="@+id/editTextTag" />
 
         <Button
             android:text="Confirmar"
@@ -102,14 +112,6 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ListViewTags"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/ButtonAddTag"
-            android:layout_above="@+id/button3" />
 
     </RelativeLayout>
 </ScrollView>
