--- a/app/src/main/res/layout/activity_cadastrar_aula.xml
+++ b/app/src/main/res/layout/activity_cadastrar_aula.xml
@@ -43,18 +43,6 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/TextViewHorasDeAula"
-            android:hint="Horas de aula fornecidas"
-            android:layout_marginTop="27dp"
-            android:layout_below="@+id/editTextDescricao"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:hint="Nome da aula"
             android:id="@+id/EditTextNome"
@@ -71,11 +59,44 @@
             android:background="#7bc8f3"
             android:textColor="@android:color/background_light"
             android:onClick="cadastrarAulaTutor"
+
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/TextViewPreco"
+            android:hint="@string/pre_o_por_hora_aula"
+            android:layout_below="@+id/editTextDescricao"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/TextViewHorasDeAula"
+            android:hint="Horas de aula fornecidas"
+            android:layout_below="@+id/TextViewPreco"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <AutoCompleteTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/editTextTag"
+            android:hint="Tag"
+            android:layout_below="@+id/TextViewHorasDeAula"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <Button
             android:text="Add"
@@ -85,44 +106,20 @@
             android:background="#7bc8f3"
             android:textColor="@android:color/background_light"
             android:onClick="populateListView"
+            android:layout_marginLeft="33dp"
+            android:layout_marginStart="33dp"
             android:layout_below="@+id/TextViewHorasDeAula"
             android:layout_toRightOf="@+id/editTextTag"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="27dp"
-            android:layout_marginEnd="27dp"
-            android:layout_marginTop="32dp" />
-
-        <AutoCompleteTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:id="@+id/editTextTag"
-            android:hint="Tag"
-            android:layout_alignBottom="@+id/ButtonAddTag"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_toEndOf="@+id/editTextTag" />
 
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/ListViewTags"
-            android:layout_below="@+id/ButtonAddTag"
+            android:layout_below="@+id/editTextTag"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_above="@+id/TextViewPreco" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/TextViewPreco"
-            android:hint="@string/pre_o_por_hora_aula"
-            android:layout_marginBottom="22dp"
-            android:layout_above="@+id/button5"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_above="@+id/button5" />
 
     </RelativeLayout>
     </ScrollView>
