--- a/app/src/main/res/layout/activity_comprar_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_comprar_aula_aluno.xml
@@ -66,20 +66,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView20"
+            android:layout_below="@+id/EditTextTotaDeHorasDesejadas"
             android:layout_alignBaseline="@+id/TextViewTotalDaCompra"
             android:layout_alignBottom="@+id/TextViewTotalDaCompra"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/EditTextTotaDeHorasDesejadas"
-            android:hint="Total de horas desejadas"
-            android:layout_above="@+id/textView20"
-            android:layout_alignBottom="@+id/textInputLayout"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -187,7 +176,6 @@
             android:id="@+id/textView9"
             android:layout_marginTop="25dp"
             android:layout_below="@+id/toolbar"
-            android:layout_above="@+id/TextViewDescricaoAula"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
@@ -196,7 +184,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/TextViewDescricaoAula"
-            android:layout_above="@+id/EditTextTotaDeHorasDesejadas"
+            android:layout_below="@+id/textView9"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="13dp"
@@ -213,6 +201,17 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/textView20"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/EditTextTotaDeHorasDesejadas"
+            android:hint="Total de horas desejadas"
+            android:layout_below="@+id/TextViewDescricaoAula"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 </ScrollView>
