--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -174,6 +174,21 @@
                 fab:fab_colorRipple="@color/colorAccent"
                 fab:fab_label="Chat com Professor"/>
 
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/comprar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:src="@android:drawable/ic_menu_add"
+                android:onClick="comprarMaisHoras"
+                fab:fab_colorNormal="@color/colorPrimary"
+                fab:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_colorRipple="@color/colorAccent"
+                fab:fab_label="Comprar mais horas"/>
+
         </com.github.clans.fab.FloatingActionMenu>
 
         <RatingBar
