--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -203,6 +203,26 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <Switch
+            android:text="Switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/ratingBar2"
+            android:layout_toRightOf="@+id/ratingBar2"
+            android:layout_toEndOf="@+id/ratingBar2"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/switchRate" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewConfimacao"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="11dp"
+            android:id="@+id/textView3" />
+
     </RelativeLayout>
 
 </ScrollView>
