--- a/app/src/main/res/layout/activity_aula_professor.xml
+++ b/app/src/main/res/layout/activity_aula_professor.xml
@@ -122,14 +122,6 @@
             android:layout_toLeftOf="@+id/textViewNome"
             android:layout_toStartOf="@+id/textViewNome" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ListViewTags"
-            android:layout_below="@+id/textViewTags"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
-
         <com.github.clans.fab.FloatingActionMenu
             android:id="@+id/menu"
             android:layout_width="wrap_content"
@@ -219,6 +211,15 @@
                 fab:fab_label="Confirmar Aula"/>
 
         </com.github.clans.fab.FloatingActionMenu>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ListViewTags"
+            android:layout_below="@+id/textViewTags"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="20dp" />
 
     </RelativeLayout>
 </ScrollView>
