--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -7,14 +7,6 @@
     android:layout_height="wrap_content"
     tools:context="ufrpe.edu.learnit.RatingActivity">
 
-    <RatingBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:id="@+id/ratingBar"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -36,6 +28,23 @@
         android:textSize="25sp"
         tools:text="NomeProfessor" />
 
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:id="@+id/ratingBar2"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignLeft="@+id/ratingBar"
+        android:layout_alignStart="@+id/ratingBar" />
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="135dp"
+        android:id="@+id/ratingBar"
+        android:layout_below="@+id/ratingBar2"
+        android:layout_centerHorizontal="true" />
+
     <Button
         android:text="Confirmar"
         android:layout_width="wrap_content"
@@ -45,5 +54,26 @@
         android:textColor="@android:color/background_light"
         android:layout_below="@+id/ratingBar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="167dp" />
+        android:layout_marginTop="67dp" />
+
+    <TextView
+        android:text="Média geral do Professor/Aula"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
+        android:id="@+id/textView7"
+        android:textSize="25sp"
+        android:layout_below="@+id/toolbar"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Sua nota para Professor/Aula"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="62dp"
+        android:id="@+id/textView8"
+        android:textSize="25sp"
+        android:layout_above="@+id/buttonConfirmar"
+        android:layout_alignRight="@+id/textView7"
+        android:layout_alignEnd="@+id/textView7" />
 </RelativeLayout>
