--- a/app/src/main/res/layout/activity_rating_professor.xml
+++ b/app/src/main/res/layout/activity_rating_professor.xml
@@ -57,7 +57,7 @@
         android:layout_marginTop="67dp" />
 
     <TextView
-        android:text="Média geral da Aula"
+        android:text="Média geral do Professor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="33dp"
@@ -67,7 +67,7 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="Sua nota para a Aula"
+        android:text="Sua nota para o Professor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="62dp"
