--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -203,6 +203,28 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <Button
+            android:text="Dar nota aula"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:layout_marginTop="21dp"
+            android:layout_below="@+id/textViewConfimacao"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:text="Dar nota professor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button3"
+            android:layout_alignBaseline="@+id/button2"
+            android:layout_alignBottom="@+id/button2"
+            android:layout_toRightOf="@+id/textViewNomeDoProfessor"
+            android:layout_toEndOf="@+id/textViewNomeDoProfessor"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp" />
+
     </RelativeLayout>
 
 </ScrollView>
