--- a/app/src/main/res/layout/activity_aula_aluno.xml
+++ b/app/src/main/res/layout/activity_aula_aluno.xml
@@ -99,6 +99,18 @@
             android:layout_toRightOf="@+id/textView2"
             android:layout_toEndOf="@+id/textView2" />
 
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBarMediaGeral"
+            android:clickable="false"
+            android:numStars="5"
+            android:focusable="false"
+            android:isIndicator="true"
+            android:layout_alignBottom="@+id/textViewConfimacao"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
         <com.github.clans.fab.FloatingActionMenu
             android:id="@+id/menu"
             android:layout_width="wrap_content"
@@ -137,10 +149,10 @@
             fab:menu_openDirection="up"
             fab:menu_backgroundColor="@android:color/transparent"
             fab:menu_fab_label="Fechar"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/textViewHoras"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/textViewRate">
+            android:layout_marginTop="27dp">
 
             <com.github.clans.fab.FloatingActionButton
                 android:text="Confirmar"
@@ -150,6 +162,24 @@
                 android:background="#7bc8f3"
                 android:textColor="@android:color/background_light"
                 android:onClick="confirmar"
+                android:src="@android:drawable/ic_menu_add"
+                fab:fab_colorNormal="@color/colorPrimary"
+                fab:fab_colorPressed="@color/colorPrimaryDark"
+                fab:fab_colorRipple="@color/colorAccent"
+                fab:fab_label="Confirmar horas"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:text="avaliar professor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button5"
+                android:background="#7bc8f3"
+                android:textColor="@android:color/background_light"
+                android:onClick="carregarAvaliacaoProfessor"
                 android:src="@android:drawable/ic_menu_add"
                 fab:fab_colorNormal="@color/colorPrimary"
                 fab:fab_colorPressed="@color/colorPrimaryDark"
@@ -176,18 +206,6 @@
                 fab:fab_label="Comprar mais horas"/>
 
         </com.github.clans.fab.FloatingActionMenu>
-
-        <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ratingBarMediaGeral"
-            android:clickable="false"
-            android:numStars="5"
-            android:focusable="false"
-            android:isIndicator="true"
-            android:layout_alignBottom="@+id/textViewConfimacao"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
 
     </RelativeLayout>
 
