--- a/app/src/main/res/layout/activity_rating_professor.xml
+++ b/app/src/main/res/layout/activity_rating_professor.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_editar_perfil"
+    android:id="@+id/activity_rating_professor"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="ufrpe.edu.learnit.rating.gui.RatingActivityAula">
+    tools:context="ufrpe.edu.learnit.rating.gui.RatingActivityProfessor">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -55,7 +55,9 @@
         android:textColor="@android:color/background_light"
         android:layout_below="@+id/ratingBarSuaNota"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp" />
+        android:layout_marginTop="67dp"
+        android:onClick="confirmarAvalicaoProfessor"
+        />
 
     <TextView
         android:text="Média geral do Professor"
